# xfce4-pulseaudio-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt
icons/: Makefile.am  meson.build
icons/scalable/status/: Makefile.am
panel-plugin/: Makefile.am  devicemenuitem.c  devicemenuitem.h  meson.build  mprismenuitem.c  mprismenuitem.h  pulseaudio-button.c  pulseaudio-button.h  pulseaudio-config.c  pulseaudio-config.h  pulseaudio-debug.c  pulseaudio-debug.h  pulseaudio-dialog.c  pulseaudio-dialog.glade  pulseaudio-dialog.gresource.xml  pulseaudio-dialog.h  pulseaudio-menu.c  pulseaudio-menu.h  pulseaudio-mpris-player.c  pulseaudio-mpris-player.h  pulseaudio-mpris.c  pulseaudio-mpris.h  pulseaudio-notify.c  pulseaudio-notify.h  pulseaudio-plugin.c  pulseaudio-plugin.h  pulseaudio-volume.c  pulseaudio-volume.h  pulseaudio.desktop.in.in  scalemenuitem.c  scalemenuitem.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  ms.po  nb.po  nl.po  (+18 more)
