# $Id: Makefile.am 2257 2006-12-19 19:49:00Z nick $

iconsdir = $(datadir)/icons/hicolor/scalable/status
icons_DATA =								\
    audio-volume-high-symbolic.svg          \
    audio-volume-low-symbolic.svg           \
    audio-volume-medium-symbolic.svg        \
    audio-volume-muted-symbolic.svg         \
    microphone-sensitivity-high-symbolic.svg          \
    microphone-sensitivity-low-symbolic.svg           \
    microphone-sensitivity-medium-symbolic.svg        \
    microphone-sensitivity-muted-symbolic.svg

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
